# OminiX-Studio

./: .gitignore  ADDING_MODELS.md  Cargo.toml  MLX_MODEL_PLAN.md  README.md  REFACTORING_PLAN.md  VOICE_PLAN.md  local_models_config.example.json
apps/moly-chat/: Cargo.toml
apps/moly-chat/src/: lib.rs
apps/moly-chat/src/screen/: design.rs  mod.rs
apps/moly-hub/: Cargo.toml
apps/moly-hub/src/: lib.rs
apps/moly-hub/src/screen/: design.rs  mod.rs
apps/moly-local-models/: Cargo.toml
apps/moly-local-models/src/: lib.rs
apps/moly-local-models/src/screen/: design.rs  mod.rs
apps/moly-mcp/src/: lib.rs
apps/moly-mcp/src/screen/: design.rs  mod.rs
apps/moly-models/src/: lib.rs
apps/moly-models/src/screen/: design.rs  mod.rs
apps/moly-settings/: Cargo.toml
apps/moly-settings/src/: lib.rs
apps/moly-settings/src/screen/: design.rs  mod.rs
apps/moly-voice/: Cargo.toml
apps/moly-voice/src/: lib.rs
apps/moly-voice/src/screen/: design.rs  mod.rs
moly-data/: Cargo.toml
moly-data/src/: a2ui_builder.rs  a2ui_tools.rs  chats.rs  lib.rs  local_models.rs  model_registry.rs  model_runtime_client.rs  models_registry.json  ominix_image_client.rs  preferences.rs  providers.rs  providers_manager.rs  store.rs
moly-shell/: Cargo.toml
moly-shell/resources/: AppIcon.icns
moly-shell/src/: a2ui_builder.rs  app.rs  main.rs
moly-widgets/src/: app_data.rs  app_trait.rs  lib.rs  moly_theme.rs  page_router.rs  theme.rs
moly-widgets/src/components/: mod.rs
