[workspace]
resolver = "2"
members = [
    "moly-shell",
    "moly-widgets",
    "moly-data",
    "apps/*",
]

# Architecture: Apps are separate crates under apps/ following mofa-studio pattern
# - Each app implements MolyApp trait from moly-widgets
# - Shell imports and registers apps via live_design(cx) calls
# - Shared data types are in moly-data crate

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
# Makepad UI framework (official dev branch)
makepad-widgets = { git = "https://github.com/makepad/makepad", branch = "dev" }

# Makepad component library (switch, spinner, modal, tooltip, etc.)
makepad-component = { git = "https://github.com/ZhangHanDong/makepad-component", package = "makepad-component" }

# Moly-kit for chat widgets (from ymote/moly fork)
moly-kit = { git = "https://github.com/ymote/moly", rev = "ad02d12", package = "moly-kit", features = ["full"] }

# AI toolkit for chat controller and clients (from ymote/aitk fork)
aitk = { git = "https://github.com/ymote/aitk", branch = "fix/openai-compat-and-crash-guard", features = ["async-rt", "http", "mcp"] }

# Moly protocol for message types
moly-protocol = { git = "https://github.com/moly-ai/moly-local", package = "moly-protocol", rev = "788cac14d" }

# Internal workspace dependencies
moly-data = { path = "moly-data" }
moly-widgets = { path = "moly-widgets" }

# Common utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5.8"
futures = "0.3.31"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "blocking", "multipart"], default-features = false }
uuid = { version = "1.18.0", features = ["js", "v7"] }
dirs = "5.0"
tokio = { version = "1.43", features = ["rt", "time"] }

[patch.'https://github.com/moly-ai/aitk']
aitk = { git = "https://github.com/ymote/aitk", branch = "fix/openai-compat-and-crash-guard" }
