[package]
name = "moly-chat"
version.workspace = true
edition.workspace = true

[dependencies]
# Makepad
makepad-widgets.workspace = true

# Moly dependencies
moly-kit.workspace = true
moly-data.workspace = true
moly-widgets.workspace = true

# Utilities
log.workspace = true
reqwest.workspace = true
serde_json.workspace = true
base64 = "0.22"
