[package]
name = "moly-local-models"
version.workspace = true
edition.workspace = true

[dependencies]
makepad-widgets.workspace = true
moly-data.workspace = true
moly-widgets.workspace = true

log.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
chrono.workspace = true

# Model conversion
mlx-rs-core = { git = "https://github.com/OminiX-ai/OminiX-MLX", rev = "7540f68a", package = "mlx-rs-core", features = ["convert"] }
